--- a/index.html
+++ b/index.html
@@ -62,46 +62,54 @@
         <div class="container">
             <div class="col-lg-12 text-center">
                 <div class="row">
-                    <div class="">
-                        <img class="" src="">
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize techimgtop" src="../img/logos 2/django_restframework.gif">
                     </div>
-                    <div class="">
-                        <img class="" src="">
-                   </div>
-                    <div class="">
-                        <img class="" src="">
-                   </div>
-                    <div class="">
-                        <img class="" src="">
-                  </div>
-                    <div class="">
-                        <img class="" src="">
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize techimgtop" src="../img/logos 2/Angular.png">
                     </div>
-                    <div class="">
-                        <img class="" src="">
-                   </div>
-                    <div class="">
-                        <img class="" src="">
-                  </div>
-                    <div class="">
-                        <img class="" src="">
-                   </div>
-                    <div class="">
-                        <img class="" src="">
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize techimgtop" src="../img/logos 2/Bootstrap.png">
                     </div>
-                    <div class="">
-                        <img class="" src="">
-                   </div>
-                    <div class="">
-                        <img class="" src="">
-                   </div>
-                    <div class="">
-                        <img class="" src="">
-                  </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize techimgtop" src="../img/logos 2/Browserify.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize techimgtop" src="../img/logos 2/CSS3.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize techimgtop" src="../img/logos 2/Firebase.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/Git.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/Github.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/Grunt.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/NPM.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/python_log.jpg">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/django_python.jpg">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/sql.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/sqlite.png">
+                    </div>
+                    <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos 2/javascript-logo.png">
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- /.container -->
     </section><br><br>
 
    
@@ -138,7 +146,7 @@
                                     Wilshire Grand Hotel&Center LA, CA
                                 </h4>
                                 <h4 class="stevejobs">
-                                    Assistant Manager, Employment
+                                    Asistant Manager, Employment
                                 </h4>
                             </div>
                         </div>
@@ -179,7 +187,7 @@
                     <div class ='row'>
                         <div class='col-md-6'>
                             <div class='portfolio-item'>
-                                <a href="https://github.com/megducharme/Needle">
+                                <a href="https://github.com/juliakimchung/">
                                     <img class="img-portfolio img-responsive" src="img/use this!.png">
                                 </a>
                             </div>
@@ -213,7 +221,7 @@
                     
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (615) 999-2479</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">juliakimchung@gmail.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="juliakimchung@gmail.com">juliakimchung@gmail.com</a>
                         </li>
                     </ul>
                     <br>
