--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                     <div class="col-md-2 techimgdiv">
                         <img class="techimgs imgresize" src="../img/logos2/Bower.png">
                     </div>
+                     <div class="col-md-2 techimgdiv">
+                        <img class="techimgs imgresize" src="../img/logos2/django_logo.jpg">
+                    </div>
                     
 
                 </div>
@@ -136,10 +139,10 @@
                                 <i  style="color:#2d267f;"class="fa fa-h-square" aria-hidden="true"></i>
                             </span>
                                 <h4 class="workPlaces">
-                                    Hilton Hotel, Omni Hotel LA, CA
+                                    Hilton Hotel<br>Omni Hotel LA, CA
                                 </h4>
                                 <h4 class="stevejobs">
-                                    Event/Sales Promotions Coordinator
+                                    Event & Sales Promotions Coordinator
                                 </h4>
                             </div>
                         </div>
@@ -151,10 +154,11 @@
                                 <i style="color:#2d267f;"class="fa fa-h-square" aria-hidden="true"></i>
                             </span>
                                 <h4 class="workPlaces">
-                                    Wilshire Grand Hotel&Center LA, CA
+                                    Wilshire Grand <br>Hotel &Center LA, CA
                                 </h4>
                                 <h4 class="stevejobs">
-                                    Asistant Manager, Employment
+                                    HR Employmnet
+                                    Asistant Manager
                                 </h4>
                             </div>
                         </div>
@@ -165,10 +169,10 @@
                                 <i style="color:#00cc53;"class="fa fa-apple" aria-hidden="true"></i>
                             </span>
                                 <h4 class="workPlaces">
-                                    juice Nashville
+                                    juice Nashville<br>
                                 </h4>
                                 <h4 class="stevejobs">
-                                    Retail Operations Manager/ HR Manager
+                                    HR Manager <br>Retail Operations Manager
                                 </h4>
                             </div>
                         </div>
