--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                     Wilshire Grand <br>Hotel &Center LA, CA
                                 </h4>
                                 <h4 class="stevejobs">
-                                    HR Employmnet
+                                    HR Employment
                                     Asistant Manager
                                 </h4>
                             </div>
