--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="https://github.com/juliakimchung">
+                                <a href="https://capstone-firebase.firebaseapp.com">
                                     <img class="img-portfolio img-responsive" src="img/asp.png">
                                 </a>
                             </div>
@@ -81,11 +81,8 @@
                     <!-- /.row (nested) -->
                     <!-- <a href="#" class="btn btn-dark">View More Items</a> -->
                 </div>
-                <!-- /.col-lg-10 -->
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container -->
     </section>
 
 
