--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="https://capstone-firebase.firebaseapp.com">
-                                    <img class="img-portfolio img-responsive" src="img/k.png">
+                                    <img class="img-portfolio img-responsive" src="img/asp.png">
                                 </a>
                             </div>
                         </div>
